# mlops-2025

./: RESULTS.md  classes_questions.txt  commands.txt  pyproject.toml  questions.txt  run_pipeline.sh
metrics/: metrics.json
models/: titanic_model.pkl  titanic_model_test_set.csv
scripts/: compare_models.py  evaluate.py  featurize.py  predict.py  preprocess.py  train.py
src/mlops_2025/features/: base_features_computer.py  features_computer.py
src/mlops_2025/models/: __init__.py  base_model.py  logistic_model.py  random_forest_model.py  xgboost_model.py
src/mlops_2025/preprocessing/: base_preprocessor.py  preprocessor.py
test_data/: test_features.csv  test_metrics.json  test_model.pkl  test_model_test_set.csv  test_predictions.csv  test_processed.csv
